Attempt wrap fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,4 +17,31 @@ section {
         width: auto;
         margin: 0
     }
+
+    header, section, footer {
+        float: none;
+        position: static;
+        width: auto
+    }
+
+    header {
+        padding-right: 320px
+    }
+
+    section {
+        border: 1px solid #e5e5e5;
+        border-width: 1px 0;
+        padding: 20px 0;
+        margin: 0 0 20px
+    }
+
+    header a small {
+        display: inline
+    }
+
+    header ul {
+        position: absolute;
+        right: 50px;
+        top: 52px
+    }
 }
